@@ -6,8 +6,13 @@
  */
 package org.gridsuite.mapping.server.service.implementation;
 
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.gridsuite.filter.expertfilter.ExpertFilter;
+import org.gridsuite.mapping.server.DynamicMappingException;
 import org.gridsuite.mapping.server.dto.InputMapping;
 import org.gridsuite.mapping.server.dto.RenameObject;
+import org.gridsuite.mapping.server.dto.Rule;
 import org.gridsuite.mapping.server.dto.models.Model;
 import org.gridsuite.mapping.server.dto.models.ParametersSetsGroup;
 import org.gridsuite.mapping.server.model.AutomatonEntity;
@@ -15,21 +20,22 @@ import org.gridsuite.mapping.server.model.MappingEntity;
 import org.gridsuite.mapping.server.model.RuleEntity;
 import org.gridsuite.mapping.server.repository.MappingRepository;
 import org.gridsuite.mapping.server.repository.ModelRepository;
+import org.gridsuite.mapping.server.repository.RuleRepository;
 import org.gridsuite.mapping.server.service.MappingService;
+import org.gridsuite.mapping.server.service.client.filter.FilterClient;
 import org.gridsuite.mapping.server.utils.Methods;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.gridsuite.mapping.server.DynamicMappingException.Type.MAPPING_NAME_NOT_PROVIDED;
 import static org.gridsuite.mapping.server.MappingConstants.DEFAULT_MAPPING_NAME;
 
 /**
@@ -38,35 +44,133 @@ import static org.gridsuite.mapping.server.MappingConstants.DEFAULT_MAPPING_NAME
 @Service
 public class MappingServiceImpl implements MappingService {
 
+    public static final String CONFLICT_MAPPING_ERROR_MESSAGE = "A mapping already exists with name: ";
+    public static final String MAPPING_NOT_FOUND_ERROR_MESSAGE = "Mapping not found with name: ";
+
     private final ModelRepository modelRepository;
     private final MappingRepository mappingRepository;
+    private final RuleRepository ruleRepository;
+    private final FilterClient filterClient;
 
     @Autowired
     public MappingServiceImpl(
             MappingRepository mappingRepository,
-            ModelRepository modelRepository
+            ModelRepository modelRepository,
+            RuleRepository ruleRepository,
+            FilterClient filterClient
     ) {
         this.modelRepository = modelRepository;
         this.mappingRepository = mappingRepository;
+        this.ruleRepository = ruleRepository;
+        this.filterClient = filterClient;
     }
 
+    @Transactional(readOnly = true)
     @Override
     public List<InputMapping> getMappingList() {
         List<MappingEntity> mappingEntities = mappingRepository.findAll();
 
-        return mappingEntities.stream().map(InputMapping::new).collect(Collectors.toList());
+        List<InputMapping> mappings = mappingEntities.stream().map(InputMapping::new).toList();
+
+        if (CollectionUtils.isNotEmpty(mappings)) {
+            // get all filter uuids to GET from filter-server
+            List<UUID> filterUuids = mappings.stream()
+                    .flatMap(mapping -> mapping.getRules().stream())
+                    .map(rule -> Optional.ofNullable(rule.getFilterUuid()))
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .toList();
+
+            if (CollectionUtils.isNotEmpty(filterUuids)) {
+                List<ExpertFilter> filters = filterClient.getFilters(filterUuids);
+                Map<UUID, ExpertFilter> filterByUuidMap = filters.stream().collect(Collectors.toMap(ExpertFilter::getId, filter -> filter));
+
+                // enrich rules with retrieved filter
+                mappings.stream().flatMap(mapping -> mapping.getRules().stream()).forEach(rule -> {
+                    ExpertFilter expertFilter = filterByUuidMap.get(rule.getFilterUuid());
+                    rule.setFilter(expertFilter);
+                });
+            }
+        }
+
+        return mappings;
+    }
+
+    @Transactional(readOnly = true)
+    @Override
+    public InputMapping getMapping(String mappingName) {
+        Optional<MappingEntity> mappingEntityOpt = mappingRepository.findById(mappingName);
+        MappingEntity mappingEntity = mappingEntityOpt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, MAPPING_NOT_FOUND_ERROR_MESSAGE + mappingName));
+        InputMapping mapping = new InputMapping(mappingEntity);
+
+        // get all filter uuids to GET from filter-server
+        List<UUID> filterUuids = mapping.getRules().stream()
+                .map(rule -> Optional.ofNullable(rule.getFilterUuid()))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
+
+        if (CollectionUtils.isNotEmpty(filterUuids)) {
+            List<ExpertFilter> filters = filterClient.getFilters(filterUuids);
+            Map<UUID, ExpertFilter> filterByUuidMap = filters.stream().collect(Collectors.toMap(ExpertFilter::getId, filter -> filter));
+
+            // enrich rules with retrieved filter
+            mapping.getRules().forEach(rule -> {
+                ExpertFilter expertFilter = filterByUuidMap.get(rule.getFilterUuid());
+                rule.setFilter(expertFilter);
+            });
+        }
+
+        return mapping;
     }
 
     @Override
     public InputMapping createMapping(String mappingName, InputMapping mapping) {
+        if (!StringUtils.isBlank(mappingName)) {
+            mapping.setName(mappingName);
+        }
+
+        if (StringUtils.isBlank(mapping.getName())) {
+            throw new DynamicMappingException(MAPPING_NAME_NOT_PROVIDED, "Mapping name not provided");
+        }
+
+        // get all filterUuids used previously in the mapping to infer to update/create/delete filters
+        List<UUID> filterUuids = ruleRepository.findFilterUuidsByMappingName(mappingName);
+
+        // IMPORTANT: new filter is enriched with new uuid while converting the whole mapping in cascade
+        // So must do converting before persisting filter in filter-server to ensure that new uuid is provided
         MappingEntity mappingToSave = mapping.convertMappingToEntity();
+
+        // --- update or create filters appeared in rules in remote filter-server --- //
+        Map<Boolean, Map<UUID, ExpertFilter>> filtersToUpdateOrCreate = mapping.getRules().stream()
+                .map(rule -> Optional.ofNullable(rule.getFilter()))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .collect(Collectors.partitioningBy(
+                    filter -> filterUuids.contains(filter.getId()),
+                    Collectors.toMap(ExpertFilter::getId, filter -> filter)
+                ));
+
+        // filters to update
+        Map<UUID, ExpertFilter> filtersToUpdateMap = filtersToUpdateOrCreate.get(Boolean.TRUE);
+
+        // filter to create
+        Map<UUID, ExpertFilter> filtersToCreateMap = filtersToUpdateOrCreate.get(Boolean.FALSE);
+
+        // filter to delete
+        List<UUID> filterUuidsToDelete = filterUuids.stream().filter(uuid -> !filtersToUpdateMap.containsKey(uuid)).toList();
+
+        filterClient.updateFilters(filtersToUpdateMap);
+        filterClient.createFilters(filtersToCreateMap);
+
+        // --- persist in cascade the mapping in local database --- //
         mappingToSave.markNotNew();
         if (mappingToSave.isControlledParameters()) {
             List<String[]> instantiatedModels = mappingToSave.getRules().stream().map(ruleEntity ->
                     new String[]{
                             ruleEntity.getMappedModel(), ruleEntity.getSetGroup()
                     }
-            ).collect(Collectors.toList());
+            ).toList();
             for (String[] instantiatedModel : instantiatedModels) {
                 ParametersSetsGroup parametersSetsGroup = Methods.getSetsGroupFromModel(instantiatedModel[0], instantiatedModel[1], modelRepository);
                 if (parametersSetsGroup.getSets().isEmpty()) {
@@ -76,16 +180,29 @@ public class MappingServiceImpl implements MappingService {
             }
         }
         mappingRepository.save(mappingToSave);
+
+        // --- clean filters in filter-server --- //
+        if (CollectionUtils.isNotEmpty(filterUuidsToDelete)) {
+            filterClient.deleteFilters(filterUuidsToDelete);
+        }
+
         return mapping;
     }
 
     @Override
     public String deleteMapping(String mappingName) {
+        // get all filterUuids used in the mapping to delete if exists
+        List<UUID> filterUuids = ruleRepository.findFilterUuidsByMappingName(mappingName);
+
+        // --- delete filters in filter-server --- //
+        if (CollectionUtils.isNotEmpty(filterUuids)) {
+            filterClient.deleteFilters(filterUuids);
+        }
+
+        // --- delete the whole mapping in local db --- //
         mappingRepository.deleteById(mappingName);
         return mappingName;
     }
-
-    static String conflictMappingErrorMessage = "A Mapping with this name already exists";
 
     @Override
     public RenameObject renameMapping(String oldName, String newName) {
@@ -97,7 +214,7 @@ public class MappingServiceImpl implements MappingService {
                 mappingRepository.save(mappingToSave);
                 return new RenameObject(oldName, newName);
             } catch (DataIntegrityViolationException ex) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, conflictMappingErrorMessage, ex);
+                throw new ResponseStatusException(HttpStatus.CONFLICT, CONFLICT_MAPPING_ERROR_MESSAGE + newName, ex);
             }
         } else if (oldName.equals(DEFAULT_MAPPING_NAME)) {
             // In case of naming of new mapping, save it to db.
@@ -106,33 +223,65 @@ public class MappingServiceImpl implements MappingService {
                 return new RenameObject(DEFAULT_MAPPING_NAME, newName);
 
             } catch (DataIntegrityViolationException ex) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, conflictMappingErrorMessage, ex);
+                throw new ResponseStatusException(HttpStatus.CONFLICT, CONFLICT_MAPPING_ERROR_MESSAGE + newName, ex);
             }
         } else {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No mapping found with this name");
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, MAPPING_NOT_FOUND_ERROR_MESSAGE + oldName);
         }
     }
 
     @Override
     public InputMapping copyMapping(String originalName, String copyName) {
-        Optional<MappingEntity> mappingToCopy = mappingRepository.findById(originalName);
-        if (mappingToCopy.isPresent()) {
-            MappingEntity copiedMapping = new MappingEntity(copyName, mappingToCopy.get());
-            try {
-                mappingRepository.save(copiedMapping);
-                return new InputMapping(copiedMapping);
-            } catch (DataIntegrityViolationException ex) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, conflictMappingErrorMessage, ex);
+        Optional<MappingEntity> mappingToCopyOpt = mappingRepository.findById(originalName);
+        MappingEntity mappingToCopy = mappingToCopyOpt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, MAPPING_NOT_FOUND_ERROR_MESSAGE + originalName));
+
+        MappingEntity copiedMapping = new MappingEntity(copyName, mappingToCopy);
+        try {
+            // --- duplicate filters in filter-server--- //
+            // get all filter uuids that needs to duplicate its corresponding filter
+            List<UUID> filterUuids = copiedMapping.getRules().stream()
+                .map(RuleEntity::getFilterUuid)
+                .filter(Objects::nonNull)
+                .toList();
+
+            if (CollectionUtils.isNotEmpty(filterUuids)) {
+                // call filter-server API to duplicate filter
+                Map<UUID, UUID> uuidsMap = filterClient.duplicateFilters(filterUuids);
+
+                // replace the old by the new uuid for rule entities
+                copiedMapping.getRules().stream()
+                    .filter(rule -> rule.getFilterUuid() != null)
+                    .forEach(rule -> rule.setFilterUuid(uuidsMap.get(rule.getFilterUuid())));
             }
-        } else {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No mapping found with this name");
+
+            // --- persist in cascade the mapping in local database --- //
+            mappingRepository.save(copiedMapping);
+
+            // --- build mapping dto to return --- //
+            InputMapping mapping = new InputMapping(copiedMapping);
+            // enrich filter for rules in the returned mapping
+            Map<UUID, Rule> filterUuidRuleMap = mapping.getRules().stream()
+                    .filter(rule -> rule.getFilterUuid() != null)
+                    .collect(Collectors.toMap(Rule::getFilterUuid, rule -> rule));
+            List<UUID> newFilterUuids = filterUuidRuleMap.keySet().stream().toList();
+            if (CollectionUtils.isNotEmpty(newFilterUuids)) {
+                List<ExpertFilter> newFilters = filterClient.getFilters(newFilterUuids);
+                Map<UUID, ExpertFilter> filterUuidFilterMap = newFilters.stream()
+                    .collect(Collectors.toMap(ExpertFilter::getId, filter -> filter));
+                filterUuidRuleMap.forEach((filterUuid, rule) -> rule.setFilter(filterUuidFilterMap.get(filterUuid)));
+            }
+
+            return mapping;
+        } catch (DataIntegrityViolationException ex) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, CONFLICT_MAPPING_ERROR_MESSAGE + copyName, ex);
         }
     }
 
+    @Transactional(readOnly = true)
     @Override
     public List<Model> getMappedModelsList(String mappingName) {
         Optional<MappingEntity> mappingEntityOpt = mappingRepository.findById(mappingName);
-        MappingEntity mapping = mappingEntityOpt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "No mapping found with this name : " + mappingName));
+        MappingEntity mapping = mappingEntityOpt.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, MAPPING_NOT_FOUND_ERROR_MESSAGE + mappingName));
 
         // models used by rule
         List<RuleEntity> ruleEntities = mapping.getRules();
